@@ -1,3 +1,13 @@
+2010-07-02  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/44780
+	* c-c++-common/Wunused-var-12.c: New test.
+
+2010-07-02  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
+
+	PR target/44707
+	* gcc.c-torture/compile/pr44707.c: New test.
+
 2010-06-29  Jason Merrill  <jason@redhat.com>
 
 	PR c++/44587
