@@ -1,3 +1,15 @@
+2010-07-02  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>
+
+	PR target/44707
+	* config/rs6000/rs6000.c (rs6000_legitimize_reload_address): Recognize
+	(lo_sum (high ...) ...) patterns generated by earlier passes.
+
+2010-07-01  Jakub Jelinek  <jakub@redhat.com>
+
+	PR debug/44694
+	* dwarf2out.c (reg_loc_descriptor): For eliminated arg_pointer_rtx
+	or frame_pointer_rtx use DW_OP_fbreg offset DW_OP_stack_value.
+
 2010-06-30  Jakub Jelinek  <jakub@redhat.com>
 
 	PR debug/44694
